--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,20 @@
-# Python virtual environment
+# Python
 venv/
-
-# Bytecode + cache
 __pycache__/
 *.pyc
 
-# Output videos + audio
-data/output/
-data/background_videos/
-*.mp4
-*.mp3
-*.wav
+# IDE
+.idea/
 
-# Config (we will create a safe template separately)
-config/config.yaml
+# Runtime data
+data/
+logs/
 
-# Whisper download cache
-~/.cache/whisper/
+# Secrets
+config/
 
-# Mac OS junk
+# Assets (optional, keep local)
+assets/
+
+# OS
 .DS_Store
-
-
